--- a/example.env
+++ b/example.env
@@ -1,3 +1,7 @@
 PORT=8080
 
 MONGODB_CONN=mongodb+srv://<user>:<password>@clusternode.hrddfik.mongodb.net/<db>
+SECRETORPRIVATEKEY=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_SECRET_ID=
